--- a/example/index.html
+++ b/example/index.html
@@ -20,7 +20,7 @@
     <script src="../bower_components/ng-debounce/angular-debounce.js"></script>
     <script src="../angular-slider-widget.js"></script>
   </head>
-  <body>
+  <body ng-app="example-app">
 
     <h1>angular-slider-widget</h1>
 
@@ -31,11 +31,11 @@
 
     For example, this:
     <p><code>
-      &lt;div slider ng-model="value" max="100" min="0" step="1" style="width: 400px" /&gt;
+      &lt;div hc-slider ng-model="value" max="100" min="0" step="1" style="width: 400px" /&gt;
     </code></p>
 
     Becomes this:
-    <div slider ng-model="value" max="100" min="0" step="1" style="width: 400px"></div>
+    <div hc-slider ng-model="value" max="100" min="0" step="1" style="width: 400px"></div>
     Value: {{value}}
 
     <h3>Why?</h3>
